--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <script type="text/javascript" src="dist/bundle.js" charset="utf-8"></script>
+    <h1>Hello world!</h1>
+    <div id='app'></div>
   </body>
+  <script type="text/javascript" src="dist/bundle.js" charset="utf-8"></script>
 </html>
